add trading API settings dialog and configuration persistence